--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,13 @@ body {
   width: 991.63px;
   height: 936.92px;
   position: absolute;
-  background-image: url(/assets/image-hero-desktop.webp);
+  background-image: url(./assets/image-hero-desktop.webp);
   top: -170px;
   left: 769px; }
   @media (min-width: 768px) and (max-width: 1440px) {
     .hero-section {
       z-index: -1;
-      background-image: url(/assets/image-hero-tablet.webp);
+      background-image: url(./assets/image-hero-tablet.webp);
       width: 720px;
       height: 720px;
       left: 380px;
@@ -59,7 +59,7 @@ body {
   @media (min-width: 375px) and (max-width: 768px) {
     .hero-section {
       z-index: -1;
-      background-image: url(/assets/image-hero-mobile.webp);
+      background-image: url(./assets/image-hero-mobile.webp);
       background-repeat: no-repeat;
       width: 720px;
       height: 720px;
@@ -317,7 +317,7 @@ body {
       height: 56px;
       border: 50%;
       background: linear-gradient(#ff6f48, #f02aa6);
-      background-image: url(/assets/icon-animation.svg); }
+      background-image: url(./assets/icon-animation.svg); }
       @media (min-width: 768px) and (max-width: 1440px) {
         .specifications__animation::before {
           margin-top: -50px; } }
@@ -372,7 +372,7 @@ body {
       height: 56px;
       border: 50%;
       background: linear-gradient(#ff6f48, #f02aa6);
-      background-image: url(/assets/icon-design.svg); }
+      background-image: url(./assets/icon-design.svg); }
       @media (min-width: 768px) and (max-width: 1440px) {
         .specifications__design::before {
           margin-top: -50px; } }
@@ -431,7 +431,7 @@ body {
       height: 56px;
       border: 50%;
       background: linear-gradient(#ff6f48, #f02aa6);
-      background-image: url(/assets/icon-photography.svg); }
+      background-image: url(.webp/assets/icon-photography.svg); }
       @media (min-width: 768px) and (max-width: 1440px) {
         .specifications__photography::before {
           margin-top: -50px; } }
@@ -491,7 +491,7 @@ body {
       height: 56px;
       border: 50%;
       background: linear-gradient(#ff6f48, #f02aa6);
-      background-image: url(/assets/icon-crypto.svg); }
+      background-image: url(./assets/icon-crypto.svg); }
       @media (min-width: 768px) and (max-width: 1440px) {
         .specifications__crypto::before {
           margin-top: -50px; } }
@@ -551,7 +551,7 @@ body {
       height: 56px;
       border: 50%;
       background: linear-gradient(#ff6f48, #f02aa6);
-      background-image: url(/assets/icon-business.svg); }
+      background-image: url(./assets/icon-business.svg); }
       @media (min-width: 768px) and (max-width: 1440px) {
         .specifications__business::before {
           margin-top: -50px; } }
